# app/backend/src/main/java/com/betterf/identity/internal/entity/EmailDeliveryStatus.java
@@ -1,0 +1,7 @@
+package com.betterf.identity.internal.entity;
+
+public enum EmailDeliveryStatus {
+    PENDING,
+    SENT,
+    FAILED
+}
